Fix text wrapping of longer BBC headlines.
BBC have changed their RSS feed to have longer titles for the articles,
which broke the layout of the page. These changes tweak the font size,
layout and number of entries to compensate for the alignment problems
caused.

--- a/public/css/isomething.css
+++ b/public/css/isomething.css
@@ -1,3 +1,7 @@
+body {
+  font-size: 13px;
+}
+
 header.navbar {
   margin: 0;
 }
